# equity-swing-backtest

./: .env.example  .gitattributes  .gitignore  FINDINGS.md  LICENSE  README.md  SETUP_LIVE.md  ci.yml  config.yaml  paper-trade.yml  pyproject.toml  requirements-dev.txt  requirements.txt  streamlit_app.py
docs/: index.html
src/: __init__.py  backtest.py  compare.py  cross_sectional.py  data.py  engine.py  events.py  execution.py  indicators.py  metrics.py  ml_backtest.py  plotting.py  portfolio.py  strategy.py  sweep.py  universe.py
src/live/: __init__.py  alpaca_data.py  broker.py  config.py  dashboard_utils.py  signals.py  trade.py
src/ml/: __init__.py  execute.py  features.py  walkforward.py
tests/: test_dashboard_utils.py  test_engine.py  test_indicators.py  test_live.py  test_metrics.py  test_ml.py  test_ml_execute.py
tracking/: equity_log.csv
